Adicionando pagina 'esqueci minha senha'

--- a/web/src/styles/pages/forgot-password.css
+++ b/web/src/styles/pages/forgot-password.css
@@ -44,6 +44,11 @@
     color: #5C8599;
 }
 
+#login-page #login-area p{
+    color: #5C8599;
+    max-width: 65%;
+}
+
 #login-page #login-area .back {
     position: absolute;
     right: 1rem;
@@ -67,7 +72,7 @@ form.login-form {
     border: 1px solid #D3E2E5;
     border-radius: 20px;
 
-    margin-top: 40px;
+    margin-top: 20px;
     padding: 64px 80px;
 
     overflow: hidden;
@@ -116,6 +121,11 @@ form.login-form fieldset .input-block-bottom input[type=checkbox] {
     border-radius: 20px;
     position: absolute;
     margin-top: 0px;
+    background: #37C77F;
+}
+
+form.login-form fieldset .input-block-bottom #checkbox:checked{
+    background: #37C77F;
 }
 
 form.login-form fieldset .input-block-bottom #forgot {
