--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 2rem;
 }
 
 #page-landing .content-wrapper {
@@ -22,7 +23,7 @@
     flex-direction: column;
     justify-content: space-between;
 
-    background: url('../../images/landing.svg') no-repeat  80% center;
+    background: url('../../images/landing.svg') no-repeat 80% /clamp(30rem, 35vw, 50rem);
 } 
 
 #page-landing .content-wrapper .restricted-access {
