Adicionando pagina de resetar a senha

--- a/web/src/styles/pages/reset-password.css
+++ b/web/src/styles/pages/reset-password.css
@@ -40,7 +40,7 @@
 }
 
 #login-page #login-area h1{
-    margin-top: 50px;
+    margin-top: 60px;
     color: #5C8599;
 }
 
@@ -68,14 +68,15 @@
 
 form.login-form {
     width: 100%;
-
+    height: 100%;
     border: 1px solid #D3E2E5;
     border-radius: 20px;
 
     margin-top: 20px;
     padding: 64px 80px;
 
-    overflow: hidden;
+    overflow: auto;
+
 }
 
 form.login-form fieldset {
@@ -90,13 +91,13 @@ form.login-form fieldset + fieldset {
     margin-top: 80px;
 }
   
-form.login-form .input-block {
-    margin-top: 24px;
+form.login-form .input-block{
+    margin-top: 14px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
   
-form.login-form .input-block label {
+form.login-form label {
     display: flex;
     color: #8FA7B3;
     margin-bottom: 8px;
@@ -144,6 +145,14 @@ form.login-form .input-block input {
   border-radius: 20px;
   outline: none;
   color: #5C8599;
+  z-index: 10;
+}
+
+form.login-form .input-block button {
+  position: absolute;
+  right: 7rem;
+  top: 26.5rem;
+  z-index: 20;
 }
 
 form.login-form .input-block input {
@@ -151,8 +160,14 @@ form.login-form .input-block input {
   padding: 0 16px;
 }
 
+form.login-form .input-block button {
+    background: none;
+    border: none;
+    
+}
+
 form.login-form button.login-button {
-    margin-top: 64px;
+    margin-top: 34px;
   
     width: 100%;
     height: 64px;
