--- a/web/src/styles/pages/RestricetdAcess/forgot-password.css
+++ b/web/src/styles/pages/RestricetdAcess/forgot-password.css
@@ -1,10 +1,10 @@
-#login-page {
+#forgot-page {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
 }
   
-#login-page #left-side {
+#forgot-page #left-side {
     display: flex;
     flex: 1;
     width: 70vw;
@@ -14,7 +14,7 @@
     background-color: #29B6D1;
 }
 
-#login-page .location {
+#forgot-page .location {
     position: absolute;
     left: auto;
     bottom: 8rem;
@@ -27,7 +27,7 @@
     flex-direction: column;
 }
 
-#login-page #login-area {
+#forgot-page #forgot-area {
     background-color: #D3E2E5;
     display: flex;
     height: 100vh;
@@ -39,17 +39,17 @@
     flex-direction: column;
 }
 
-#login-page #login-area h1{
-    margin-top: 60px;
+#forgot-page #forgot-area h1{
+    margin-top: 50px;
     color: #5C8599;
 }
 
-#login-page #login-area p{
+#forgot-page #forgot-area p{
     color: #5C8599;
     max-width: 65%;
 }
 
-#login-page #login-area .back {
+#forgot-page #forgot-area .back {
     position: absolute;
     right: 1rem;
     top: 1rem;
@@ -68,14 +68,14 @@
 
 form.login-form {
     width: 100%;
-    height: 100%;
+
     border: 1px solid #D3E2E5;
     border-radius: 20px;
 
     margin-top: 20px;
-    padding: 20px 50px;
+    padding: 64px 80px;
 
-
+    overflow: hidden;
 }
 
 form.login-form fieldset {
@@ -90,13 +90,13 @@ form.login-form fieldset + fieldset {
     margin-top: 80px;
 }
   
-form.login-form .input-block{
-    margin-top: 14px;
+form.login-form .input-block {
+    margin-top: 24px;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
   
-form.login-form label {
+form.login-form .input-block label {
     display: flex;
     color: #8FA7B3;
     margin-bottom: 8px;
@@ -144,14 +144,6 @@ form.login-form .input-block input {
   border-radius: 20px;
   outline: none;
   color: #5C8599;
-  z-index: 10;
-}
-
-form.login-form .input-block button {
-  position: absolute;
-  right: 7rem;
-  top: 26.5rem;
-  z-index: 20;
 }
 
 form.login-form .input-block input {
@@ -159,14 +151,8 @@ form.login-form .input-block input {
   padding: 0 16px;
 }
 
-form.login-form .input-block button {
-    background: none;
-    border: none;
-    
-}
-
 form.login-form button.login-button {
-    margin-top: 34px;
+    margin-top: 64px;
   
     width: 100%;
     height: 64px;
