--- a/web/src/styles/pages/RestricetdAcess/login.css
+++ b/web/src/styles/pages/RestricetdAcess/login.css
@@ -87,10 +87,10 @@ form.login-form .input-block + .input-block {
     margin-top: 24px;
 }
   
-form.login-form .input-block label {
+form.login-form label {
     display: flex;
     color: #8FA7B3;
-    margin-bottom: 8px;
+    margin-top: 8px;
     line-height: 24px;
 }
 
@@ -100,27 +100,34 @@ form.login-form .input-block-bottom {
     margin-top: 15px;
     border: none;
     font-size: 16px;
+    justify-content: space-between;
+    width: 100%;
 }
 
 form.login-form .input-block-bottom label {
     color: #8FA7B3;
-    margin-left: 30px;
     line-height: 24px;
+    white-space: nowrap;
+    margin-left: 30px;
+    margin-top: 0px;
 }
 
 form.login-form fieldset .input-block-bottom input[type=checkbox] {
     width: 24px;
     height: 24px;
-    border-radius: 20px;
+    border-radius: 8px;
+    border: 1px solid #a8a8a8;
+    background-color: #F5F8FA;
     position: absolute;
     margin-top: 0px;
 }
 
 form.login-form fieldset .input-block-bottom #forgot {
     color: #8FA7B3;
-    margin-left: 6rem;
     line-height: 24px;
     text-decoration: none;
+    white-space: nowrap;
+    margin-left: 10px;
 }
 
 form.login-form .input-block input {
@@ -152,4 +159,8 @@ form.login-form button.login-button {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+form.login-form button.login-button {
+    border: 0;
 }
