--- a/web/src/styles/components/sidebar-pending-dashboard.css
+++ b/web/src/styles/components/sidebar-pending-dashboard.css
@@ -24,6 +24,7 @@ aside.dashboard-pending-sidebar button.map-pin {
     height: 48px;
   
     border: 0;
+    outline: none;
   
     background: #12AFCB;
     border-radius: 16px;
@@ -37,12 +38,17 @@ aside.dashboard-pending-sidebar button.map-pin {
     align-items: center;
 }
 
+aside.dashboard-pending-sidebar button.map-pin:active {
+    outline: none;
+}
+
 aside.dashboard-pending-sidebar button.alert-circle {
     margin-top: 15px;
     width: 48px;
     height: 48px;
   
     border: 0;
+    outline: none;
   
     background: #FFD666;
     border-radius: 16px;
@@ -54,6 +60,10 @@ aside.dashboard-pending-sidebar button.alert-circle {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+aside.dashboard-pending-sidebar button.alert-circle:active {
+    outline: none;
 }
   
 aside.dashboard-pending-sidebar footer a,
