--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -11,4 +11,10 @@ body {
 
 body, input, button, textarea {
     font: 600 18px Nunito, sans-serif;
+    outline: none;
 }
+
+button:active {
+    outline: none;
+}
+
